# HOGE

./: '  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  Singularity.def  docker-test.bash  singularity-test.bash
chisel/: .gitignore
chisel/AXI4IKS/: build.sbt
chisel/AXI4IKS/src/main/scala/: AXI4.scala  ChangeSizer.scala  Config.scala  IdentityKeySwitching.scala  SampleExtractIndex.scala
chisel/AXI4IKS/src/test/cpp/: CMakeLists.txt  cpptest.cpp
chisel/AXISBR/: build.sbt
chisel/AXISBR/src/main/scala/: BlindRotate.scala  Util.scala
chisel/AXISBR/src/test/cpp/: CMakeLists.txt  cpptest.cpp
chisel/Bootstrapping/: CMakeLists.txt  build.sbt
chisel/Bootstrapping/src/main/scala/: BlindRotate.scala  Bootstrapping.scala  ButterflyADD.scala  ChangeSizer.scala  Config.scala  ExternalProduct.scala  IdentityKeySwitching.scala  NTT.scala  PolynomialMulByXai.scala  SampleExtractIndex.scala  Util.scala
chisel/Bootstrapping/src/test/cpp/: CMakeLists.txt  cpptest.cpp
chisel/Decomposition/: CMakeLists.txt
chisel/Decomposition/src/main/scala/: Config.scala  ExternalProduct.scala  NTT.scala
chisel/Decomposition/src/test/cpp/: CMakeLists.txt  cpptest.cpp
chisel/ExternalProduct/: build.sbt
chisel/ExternalProduct/src/main/scala/: ButterflyADD.scala  ExternalProduct.scala  INTorus.scala  NTT.scala
chisel/ExternalProduct/src/test/cpp/: CMakeLists.txt  cpptest.cpp
chisel/ExternalProduct/src/test/scala/: NTT.scala
chisel/HomGate/: build.sbt
chisel/HomGate/src/main/scala/: BlindRotate.scala  ButterflyADD.scala  Config.scala  ExternalProduct.scala  IdentityKeySwitching.scala  NTT.scala  Util.scala
chisel/HomGate/src/test/cpp/: CMakeLists.txt  cpptest.cpp
chisel/HomNAND/src/main/scala/: Bootstrapping.scala  ChangeSizer.scala  Config.scala  ExternalProduct.scala  HomNAND.scala  IdentityKeySwitching.scala  NTT.scala  PolynomialMulByXai.scala  SampleExtractIndex.scala
chisel/HomNAND/src/test/cpp/: CMakeLists.txt  cpptest.cpp
chisel/INTT/src/main/scala/: ButterflyADD.scala  Config.scala  NTT.scala  Util.scala
chisel/INTT/src/test/cpp/: CMakeLists.txt  cpptest.cpp
chisel/IdentityKeySwitching/src/main/scala/: BlindRotate.scala  Config.scala  ExternalProduct.scala  INTorus.scala  IdentityKeySwitching.scala  NTT.scala
chisel/NTTid/: build.sbt
chisel/PolynomialMulByXai/: .gitignore
python/: axi4br.template  harvey-primitive-search.py  karatsuba.cpp  prime-search.py  primitive-root.py
python/axi4iks/: axi4iks.template
python/axisbr/: axi4gen.py  axisbr.template  axisbrback.template  axisbrfront.template  vitisconfig.txt
python/axisiks/: axi4gen.py  axisiks.template
python/bootstrapping/: axi4gen.py  axisbrlater.template  bootstrapping.template
python/homgate/: axi4gen.py  brback.template  brfront.template  homgate.template  vitisconfig.txt
python/homnand/: axi4gen.py  brback.template  brfront.template  homnand.template
python/multislr/: axi4gen.py  multislr_axi4br.template  multislr_axi4extpformer.template  multislr_axi4extplast.template  multislr_axi4extplater.template  multislr_axi4extpmiddle.template  multislr_axi4extppremiddle.template
python/raiks/: axi4gen.py  raiks.template
python/xaittgen/: xaitt.scala.template  xaittgen.py
thirdparties/xcl2/: CMakeLists.txt
xcltest/: emconfig.json  xrt.ini
xcltest/AXI4BR/: host.cpp
xcltest/AXI4IKS/: CMakeLists.txt  host.cpp
xcltest/AXISBR/: host.cpp
xcltest/AXISIKS/: host.cpp
xcltest/Bootstrapping/: host.cpp
xcltest/HomGate/: CMakeLists.txt  nand.cpp
xcltest/HomNAND/: CMakeLists.txt  host.cpp
xcltest/RAIKS/: host.cpp
(+37 files in other folders)
